--- a/Flask/ChatGPTPlaygroundUI/templates/index.html
+++ b/Flask/ChatGPTPlaygroundUI/templates/index.html
@@ -7,9 +7,12 @@
     
     <style>
         body {
-            background-color: #33704a;
+            background-color: #77b08d;
             color: #ededf2;
             min-width: 1000px;
+        }
+        body h2 {
+            color: rgb(16, 78, 43)
         }
         .container {
             margin-top: 20px;
@@ -130,13 +133,14 @@
                         <input type="range" min=1 max=4096 value=512 step=1 class="slider" id="maxtoken">
                     </div>
                     <div class="comboboxcontainer">
-                        <label for="system-content-select">system content:</label>
+                        <label for="act-as-selector" style="font-weight: 100;">AI action role:</label>
                         <div class="elementcontainer">
-                            <select class="combobox" name="system-contents" id="system-content-select">
+                            <select class="combobox" name="act-as" id="act-as-selector">
                                 <option value="">--Please choose an option--</option>
-                                <option value="Python Code Generator">Python Code Generator</option>
-                                <option value="Python Comments Generator">Python Comments Generator</option> 
-                                <option value="Python Tutor">Python Tutor</option> 
+                                <option value="Code Generator">코드 생성자</option>
+                                <option value="Comments Generator">주석 생성자</option> 
+                                <option value="Project Topic Provider">프로젝트 주제 제안자</option> 
+                                <option value="Tutor">학습 지원자</option> 
                             </select>
                         </div>
                     </div>
@@ -148,8 +152,6 @@
         <div class="panel panel-default">
             <div class="panel-heading">Dialogue</div>
             <div class="panel-body" id="chat">
-                <!-- <ul class="list-group">
-                </ul> -->
             </div>
         </div>
 
@@ -161,18 +163,19 @@
             </span>
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         $("#submit").click(function(){
-            let isvalid = check_system_persona()
             let system_persona
-            if (isvalid){
-                system_persona = $("select[name=system-contents]").val()
-            }
-            else{
+            let current_index = $("select[name=act-as]").prop("selectedIndex")
+            if (current_index == 0){
+                alert("AI action role을 선택하세요.")
                 return
             }
-            
+            else {
+                system_persona = set_system_content(current_index);
+            }
+            // alert(system_persona)
             var userInput = $("#userInput").val();
             var temperature_value = Number($("#temperature_inputbox").val())
             var topp_value = Number($("#topp_inputbox").val())
@@ -182,22 +185,36 @@
             var myconfig = {"temperature": temperature_value,
                             "top_p": topp_value,
                             "n": n_value,
-                            "max_tokens": maxtoken_value
+                            "max_tokens": maxtoken_value,
             }
 
             var myconfig_str = JSON.stringify(myconfig)
-            console.log("system_persona: " + system_persona)
-            console.log("userInput: " + userInput)
-            console.log("myconfig_str: " + myconfig_str)
-            
-            $.get("/get?msg=" + system_persona + "," + userInput + "," + myconfig_str, function(data){
-                $("#chat").append("<li class='list-group-item'><b>Learner:</b> " + userInput + "</li>");
-                let responses = data.choices
-                let n = data.choices.length
-                $.each(responses, function(index, message){
-                    $("#chat").append("<li class='list-group-item'><b>AI Response</b> [" + index + "] : "+  data.choices[index].message['content'] + "</li>");
-                })
-            });
+
+            let dict = {
+                "system_persona":system_persona,
+                "userInput": userInput, 
+                "hyperparams": myconfig_str,
+            }
+            // console.log("dict: " + JSON.stringify(dict))
+
+            $.ajax({
+                    type: 'POST',
+                    url: "/post",
+                    data: JSON.stringify(dict),
+                    contentType: 'application/json',
+                    dataType: 'json',
+                    success: function(data){
+                        console.log(data.choices[0].message['content']);
+                        $("#chat").append("<li class='list-group-item'><b>Learner:</b> " + userInput + "</li>");
+                        let responses = data.choices
+                        let n = data.choices.length
+                        $.each(responses, function(index, message){
+                            $("#chat").append("<li class='list-group-item' id='chat-response'><b style='color: #66ffcc'>AI Response</b> [" + index + "] : "+  data.choices[index].message['content'] + "</li>");
+                            $("#chat #chat-response").css({"margin-left": "15px"});
+                            });
+                        $("#userInput").val("");
+                        }
+                    });
         });
     </script>
     <!-- 공통 처리를 위한 스크립트 -->
@@ -223,17 +240,56 @@
             var slide_value = $("#"+name).val()
             $("#" + name + "_inputbox").val(slide_value)
         } 
+        function actAsChangeHandler(event){
+            let selected_index = $("select[name=act-as]").prop("selectedIndex")
+            let selected_act_as_value = $(this).val() 
+            let selected_act_as_text = $("select[name=act-as] option:selected").text() 
+            // alert(current_index + " " + current_act_as_value + " " + current_act_as_text)
+            reset_hyperparam_values(selected_index)
+        }
 
         $(".hyperparam_value").bind('change', inputboxChangeHandler)
         $(".slider").bind('change', slideChangeHandler)
+        $("#act-as-selector").bind("change", actAsChangeHandler)
 
-        function check_system_persona(){
-            let current_index = $("select[name=system-contents]").prop("selectedIndex")
-            if (current_index == 0){
-                alert("Please choose a system content.")
-                return false
+        function reset_hyperparam_values(selected_index){
+            if (selected_index==1){
+                $("#temperature_inputbox").val(0.2);
+                $("#topp_inputbox").val(0.1);
             }
-            return true
+            else if (selected_index==2){
+                $("#temperature_inputbox").val(0.2);
+                $("#topp_inputbox").val(0.1);
+            }
+            else if (selected_index==3){
+                $("#temperature_inputbox").val(1.2);
+                $("#topp_inputbox").val(1.0);
+                $("#n_inputbox").val(2);
+            }
+            else if (selected_index==4){
+                $("#temperature_inputbox").val(1.0);
+                $("#topp_inputbox").val(1.0);
+                $("#n_inputbox").val(1);
+                $("#maxtoken_inputbox").val(1024);  // 한글인 경우 영어에 비해 약 2배 정도 토큰이 더 많이 사용되므로 크게 설정
+            }
+        }
+        function set_system_content(current_index){
+            // code generator
+            if (current_index == 1){
+                return "Python code generator"
+            }
+            // comments generator
+            else if (current_index == 2){
+                return "Python comments generator. You can generate accurate comments on each meaningful chunk of code"
+            }
+            // project topic provider
+            else if (current_index == 3){
+                return "Python expert who can suggest Python Project Topic that would be meaningful to the Python learning course"
+            }
+            // tutor
+            else if (current_index == 4){
+                return "Python learning tutor having great sense of humor, experties and advanced teaching skills. Learners can be motivated by your humorous and sound advice"
+            }
         }
     </script>
 </body>
