--- a/Flask/ChatGPT as a Learning Tool/templates/index.html
+++ b/Flask/ChatGPT as a Learning Tool/templates/index.html
@@ -22,6 +22,9 @@
             overflow-y: scroll;
             background-color: rgb(16, 78, 43);
         }
+        #chat-response {
+            color: rgb(183, 206, 225);
+        }
         .list-group-item {
             border-radius: 5px;
             background-color: rgb(16, 78, 43);
