--- a/Flask/ChatGPT as a Learning Tool/templates/index.html
+++ b/Flask/ChatGPT as a Learning Tool/templates/index.html
@@ -29,6 +29,7 @@
 
         #chat-response {
             color: rgb(183, 206, 225);
+            margin-left: 15px;
         }
         . submit {
             background-color:#21232e;
@@ -101,6 +102,10 @@
         .infospan {
             float: right; padding-left: 3px;padding-right: 3px; border: darkgray solid 1px;
         }
+        pre {
+            white-space: pre-wrap;
+        }
+
     </style>
 </head>
 <body>
@@ -225,10 +230,21 @@
                         let responses = data.choices
                         let n = data.choices.length
                         $.each(responses, function(index, message){
-                            $("#chat").append("<li class='list-group-item' id='chat-response'><b style='color: #66ffcc'>AI Response</b> [" + index + "] : "+  data.choices[index].message['content'] + "</li>");
-                            $("#chat #chat-response").css({"margin-left": "15px"});
+                            // $("#chat").append("<li class='list-group-item' id='chat-response'><b style='color: #66ffcc'>AI Response</b> [" + index + "] : "+  data.choices[index].message['content'] + "</li>");
+
+                            let msg = data.choices[index].message['content'];
+                                
+                            var response_container = $("<pre>").attr({"class":"list-group-item", "id":"chat-response"})
+                            response_container.html("<b style='color: #66ffcc'>AI Response </b>[" + index + "] : " + msg )     
+                            // response_container.html("<b style='color: #66ffcc'>AI Response </b>[" + index + "] : " + "<code style='white-space: normal'>"+ msg + "</code>" )     
+                            $("#chat").append(response_container);
                             });
                         $("#userInput").val("");
+                        },
+                        error: function(xhr, status, error){
+                            if (xhr.status !== 200){
+                                alert("Server response code is not 200: " + xhr.status)
+                            }
                         }
                     });
         });
@@ -267,6 +283,10 @@
         $(".hyperparam_value").bind('change', inputboxChangeHandler)
         $(".slider").bind('change', slideChangeHandler)
         $("#act-as-selector").bind("change", actAsChangeHandler)
+        // $("#chat-response").on('input', function(){
+        //     this.style.height = 'auto';
+        //     this.style.height = (this.scrollHeigth) + 'px';
+        // })
 
         function reset_hyperparam_values(selected_index){
             if (selected_index==1){               // 코드 생성자
@@ -296,22 +316,35 @@
         }
         function set_system_content(current_index){
             // code generator
+            var system_msg = "";
             if (current_index == 1){
-                return "Python code generator"
+                system_msg = "Python code generator."
             }
             // comments generator
             else if (current_index == 2){
-                return "Python comments generator. You can generate accurate comments on each meaningful chunk of code"
+                system_msg = "Python comments generator. You can generate accurate comments on each meaningful chunk of code."
             }
             // project topic provider
             else if (current_index == 3){
-                return "Python expert who can suggest Python Project Topic that would be meaningful to the Python learning course"
+                system_msg = "Python expert who can suggest Python Project Topic that would be meaningful to the Python learning course."
             }
             // tutor
             else if (current_index == 4){
-                return "Python learning tutor having great sense of humor, experties and advanced teaching skills. Learners can be motivated by your humorous and sound advice based on teach skills."
+                system_msg = "Python learning tutor having great sense of humor, experties and advanced teaching skills. Learners can be motivated by your humorous and sound advice based on teach skills."
             }
+            system_msg = system_msg + "Always insert a new line symbol when start your new sentence after period mark."
+            return system_msg  
         }
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#userInput").keypress(function(event){
+            if (event.keyCode === 13 && !event.shiftKey) {
+                event.preventDefault();
+                $("#submit").click()
+            }
+            })
+        })
     </script>
 </body>
 </html>
